<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FormLogin">
    <ImageView
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:src="@drawable/google"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="583dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:src="@drawable/apple"
        tools:layout_editor_absoluteX="180dp"
        tools:layout_editor_absoluteY="583dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todoI" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:src="@drawable/facebook"
        tools:layout_editor_absoluteX="280dp"
        tools:layout_editor_absoluteY="583dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todoII" />

    <TextView
        style="@style/textoII"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textinicial1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="50dp"
        tools:ignore="MissingConstraints" />

    <TextView
        style="@style/textoI"
        android:id="@+id/textView2"
        android:layout_width="368dp"
        android:layout_height="69dp"
        android:text="@string/textinicial2"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        style="@style/esqueceusenha"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textesqueceu"
        tools:layout_editor_absoluteX="271dp"
        tools:layout_editor_absoluteY="360dp"
        tools:ignore="MissingConstraints" />

    <TextView
        style="@style/outraentrada"
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textentradas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="527dp"
        tools:ignore="MissingConstraints" />

    <TextView
        style="@style/cadastrar"
        android:id="@+id/cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_cadastro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="667dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edit_email"
        style="@style/EditText"
        android:hint="@string/e_mail"
        android:drawableEnd="@drawable/ic_email"
        android:layout_width="339dp"
        android:layout_height="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="190dp"
        tools:ignore="MissingConstraints,TextFields"
        android:importantForAutofill="no"
        android:inputType="text" />



    <EditText
        android:id="@+id/edit_senhas"
        style="@style/EditText"
        android:layout_width="339dp"
        android:layout_height="68dp"
        android:drawableEnd="@drawable/ic_eye"
        android:hint="@string/senha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="290dp"
        tools:ignore="MissingConstraints"
        android:autofillHints="senha"
        android:inputType="textPassword" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bt_entrar"
        style="@style/Button"
        android:layout_width="339dp"
        android:text="@string/entrar"
        android:layout_height="68dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="400dp"
        tools:ignore="MissingConstraints" />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="470dp"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>